[MISC] Update wrong script in Gitlab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ UnitTest:
   - apt-get update -qy
   - apt-get install -y python-dev python-pip
   - pip install -r requirements.txt
-  - python manage.py test
+  - python manage.py test lists
 
 FunctionalTest:
   image: python:3.6-stretch
